# cvideo_split

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cvideo_split.sln
Tools/: init.sh  linux_ffmpeg.sh  nvidia_info.sh  profile.d.sh
clib/: CMakeLists.txt  casync_log.cpp  casync_log.h  ccmd_param.cpp  ccmd_param.h  cconfig.h  ccopy_path.cpp  ccopy_path.h  ccrypto.cpp  ccrypto.h  cdigit2str.cpp  cdigit2str.h  chardware_info.cpp  chardware_info.h  cinjector_util.cpp  cinjector_util.h  clib.vcxproj  clib.vcxproj.filters  clib_util.h  clog.cpp  clog.h  clog_color.h  clog_define.h  cmem_pool.cpp  cmem_pool.h  cnet_define.h  cnet_type.cpp  cnet_type.h  cnoncopytable.h  crandom.cpp  crandom.h  crc4.cpp  crc4.h  csingleton.h  csystem_info.cpp  csystem_info.h  ctime_stamp.cpp  ctime_stamp.h  cudp.cpp  cudp.h  (+2 more)
common/: CMakeLists.txt  EnumDefine.pb.cc  EnumDefine.pb.h  ErrorCode.pb.cc  ErrorCode.pb.h  VideoSplit.pb.cc  VideoSplit.pb.h  VideoSplitDefine.pb.cc  VideoSplitDefine.pb.h  ch264_define.h  ch264_stream.cpp  ch264_stream.h  cmpegts_define.h  cmpegts_encoder.cpp  cmpegts_encoder.h  common.vcxproj  common.vcxproj.filters
common/http_message/: EnumDefine.proto  ErrorCode.proto  VideoSplit.proto  VideoSplitDefine.proto  aCompile.bat  aCompile.sh
common_cuda/: common_cuda.vcxproj  common_cuda.vcxproj.filters  cudaCrop.cu  cudaFilterMode.cu  cudaOverlay.cu  cudaOverlay.h  cudaResize.cu  cudaUtility.h  cudaYUV-NV12.cu  cudaYUV.h  imageFormat.inl
common_execl/: XlsReader.cpp  XlsReader.h  brdb.c.h  brdb.h  common_execl.vcxproj  common_execl.vcxproj.filters  endian.c  execl_locale.c  execl_locale.h  ole.c  ole.h  xls.c  xls.h  xls2csv.c  xlsstruct.h  xlstool.c  xlstool.h
common_ffmpeg/: CMakeLists.txt  cffmpeg_util.h  common_ffmpeg.vcxproj  common_ffmpeg.vcxproj.filters
common_sip/: CMakeLists.txt  common_sip.vcxproj  common_sip.vcxproj.filters
common_sip/c-ares/: adig.c  ares__timeval.c  ares_config.h  ares_platform.c  ares_setup.h  config-win32.h  setup_once.h
common_sip/eXosip2/: eXosip2.h  exosip-config.h
common_sip/osip2/: internal.h  osip-config.h
common_sip/osipparser2/: internal.h  sdp_message.c
common_sip_client_device/: CMakeLists.txt  bits.h  common_sip_client_device.vcxproj  common_sip_client_device.vcxproj.filters  device.cpp  device.h  gb28181_header_maker.cpp  gb28181_header_maker.h  h264_parser.cpp  h264_parser.h  load_h264.cpp  load_h264.h  nalu.h  net_client.cpp
common_web/: CMakeLists.txt  common_web.vcxproj  common_web.vcxproj.filters  cproxy.h  server_http.hpp
common_websocket/: CMakeLists.txt  common_websocket.vcxproj  common_websocket.vcxproj.filters  cwebsocket_server_mgr.cpp  cwebsocket_session.cpp  cwebsocket_session.h
cvideo_split/: CMakeLists.txt  cavfilter_video.cpp  cavfilter_video.h  ccamera_decoder_mgr.cpp  ccamera_decoder_mgr.h  ccamera_info_mgr.cpp  ccamera_info_mgr.h  ccamera_mgr.cpp  ccamera_mgr.h  ccamera_status_mgr.cpp  ccamera_status_mgr.h  ccfg.cpp  ccfg.h  cclient_msg_dispatch.h  cdecode.cpp  cdecode.h  cdecoder.cpp  cdecoder.h  cencoder.cpp  cencoder.h  cffmpeg_util.cpp  cffmpeg_util.h  cglobal_ffmpeg_register.cpp  cglobal_ffmpeg_register.h  cglobal_vms_port_mgr.cpp  cglobal_vms_port_mgr.h  cglobal_vms_server_config_mgr.cpp  cglobal_vms_server_config_mgr.h  chttp_code.h  cnvidia_info.cpp  cnvidia_info.h  crect_mem_copy.cpp  crect_mem_copy.h  cvideo_split.cpp  cvideo_split.h  cvideo_split.vcxproj  cvideo_split.vcxproj.filters  cvideo_split_info_mgr.cpp  cvideo_split_info_mgr.h  cvideo_split_mgr.cpp  (+26 more)
decoder/: CMakeLists.txt  ccfg.cpp  ccfg.h  cclient_msg_dispatch.cpp  cdecoder.cpp  cdecoder.h  cdecoder_server.cpp  cdecoder_server.h  chttp_code.h  cmsg_base_id.h  cweb_handler.cpp  cweb_http_api_interface.h  cweb_http_api_mgr.cpp  cweb_http_api_mgr.h  cweb_http_api_proxy.h  cweb_http_struct.h  cwebsocket_wan_server.cpp  cwebsocket_wan_server.h  cwebsocket_wan_session.cpp  cwebsocket_wan_session.h  cwebsocket_wan_session_handler.cpp  decoder.vcxproj  decoder.vcxproj.filters  main.cpp
doc/: README.md
encryption_tools/: encryption_tools.vcxproj  main.cpp
fifo_demo/: cav_mem_pool.cpp  cav_mem_pool.h  fifo_demo.vcxproj  fifo_demo.vcxproj.filters  main.cpp
res/cfg/: camera_list.json  camera_list2.json  camera_list_bk.json  osd.json  video_tile.ini  videos.json  videos_bk.json
res/www/video/: decoder.js  index.html  libffmpeg.js  player.js  protocol.json
res/www/video_split/: CameraInfo.html  Default.html  Modify - 副本.html  Modify.html  ModifyCameraInfo.html  Resources - 副本.html  Resources.html  SplicInfos.html  SplicInfos.js  common.js  decoder.js  index - 副本.html  index.html  libffmpeg.wasm  player.js  webgl.js
res/www/video_split/data/: 批量导入模板.xls
res/www/video_split/js/: Canvas - 复制.js  Canvas1.js  Canvas10.js  Canvas11.js  Canvas12.js  Canvas2.js  Canvas3 copy.js  Canvas3.js  Canvas4 copy.js  Canvas4.js  Canvas5.js  Canvas6.js  Canvas7.js  Canvas8.js  Canvas9.js  Modify - 副本.js  Modify.js  SplicInfos - 副本.js  SplicInfos.js  camerainfo.js  config.js  js20210316-01.rar  modifycamerainfo.js  resources.js
res/www/video_split/js/layui/css/: layui.css
res/www/video_split/js/video/: decoder.js  index.html
res/www/web_api/: data.json  swagger.yaml
sip_robot/: CMakeLists.txt  ccfg.cpp  ccfg.h  csip_robot.cpp  csip_robot.h  main.cpp  sip_robot.vcxproj  sip_robot.vcxproj.filters
web_api/springboot-knife4j/: pom.xml
web_api/springboot-knife4j/src/main/java/cn/edu/sgu/www/knife4j/: SpringbootKnife4j.java
web_api/springboot-knife4j/src/main/java/cn/edu/sgu/www/knife4j/config/: Knife4jConfig.java
web_api/springboot-knife4j/src/main/java/cn/edu/sgu/www/knife4j/controller/: UserController.java
web_api/springboot-knife4j/src/main/java/cn/edu/sgu/www/knife4j/dto/: CameraInfo.java  UserLoginDTO.java
web_api/springboot-knife4j/src/main/java/cn/edu/sgu/www/knife4j/excel/: ExcelTool.java  ExeclUtils.java
web_api/springboot-knife4j/src/main/resources/: application.yml
web_api/springboot-knife4j/src/test/java/cn/edu/sgu/www/knife4j/: SpringbootKnife4JTests.java
(+1 files in other folders)
